--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,17 @@
   margin: 0;
   background-color: #2f3336;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(177.32deg, #888989 5.6%, #4a4e54 93.28%);
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(177.32deg, #888989 5.6%, #4a4e54 93.28%);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
